[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "django_utz.__version__"}

[project]
name = "django_utz"
dynamic = ["version"]

authors = [
  { name="Daniel T. Afolayan (ti-oluwa)", email="tioluwa.dev@gmail.com" },
]
maintainers = [
  { name="Daniel T. Afolayan (ti-oluwa)", email="tioluwa.dev@gmail.com" },
]
description = "Get datetime values in model instances and model serializers in user's time zone without the need to manually perform timezone conversions for each user."
keywords = [
    "User Timezone", "Auto Timezone Conversion", "Django Timezone",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
  "django>=3.2.5",
  "pytz",
  "djangorestframework",
]

[project.urls]
"Homepage" = "https://github.com/ti-oluwa/django_utz"
"Bug Tracker" = "https://github.com/ti-oluwa/django_utz/issues"
"Repository" = "https://github.com/ti-oluwa/django_utz"
